# integer-atlas-algos

./: .gitignore  CITATION.cff  COMMANDS.md  INTERFACE.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
integer_atlas_algos/: __init__.py  context.py  registry.py
integer_atlas_algos/_lib/: blake3_py.py  factorization.py  multiplicative.py
integer_atlas_algos/executor/: __main__.py  atomicio.py  cli.py  compute.py  estimate.py  manifest.py  verify.py
integer_atlas_algos/precomputed/: primes_le_31623.txt
integer_atlas_algos/properties/: __init__.py  abs_n.py  abundance_class.py  abundancy_index.py  aliquot_sum.py  binary_popcount.py  binary_repr.py  bit_length.py  carmichael_lambda.py  collatz_stopping_time.py  decimal_digit_count.py  digit_sum.py  digital_root.py  divisor_count.py  divisor_sum.py  dyadic_valuation.py  euler_phi.py  gcd_sum_pillai.py  hex_repr.py  integer_sqrt.py  is_even.py  is_fibonacci.py  is_happy.py  is_harshad.py  is_odd.py  is_palindrome.py  is_perfect.py  is_perfect_power.py  is_powerful.py  is_practical.py  is_prime.py  is_prime_power.py  is_square.py  is_squarefree.py  is_triangular.py  largest_prime_factor.py  liouville_lambda.py  mobius.py  octal_repr.py  omega_big.py  (+8 more)
tests/: test_blake3.py  test_compute.py  test_estimate.py  test_parquet.py  test_properties.py  test_resume.py  test_verify.py
tests/manifests/: base_1_1000.json  base_negatives.json  base_single_row.json  base_zero.json  unknown_column.json
tools/: bench.py  make_work_order.py  perfrun.py
(+3 files in other folders)
